consistent formatting of dbos schema (#147)