@@ -35,8 +35,9 @@ public class WorkflowDAO {
       throw new IllegalStateException("Database is closed!");
     }
 
-    final String sql =
-        "SELECT status, output, error FROM dbos.workflow_status WHERE workflow_uuid = ?;";
+    String sql =
+        "SELECT status, output, error FROM %s.workflow_status WHERE workflow_uuid = ?;"
+            .formatted(Constants.DB_SCHEMA);
 
     try (Connection connection = dataSource.getConnection();
         PreparedStatement stmt = connection.prepareStatement(sql)) {
@@ -160,7 +161,7 @@ public class WorkflowDAO {
 
     String insertSQL =
         """
-        INSERT INTO dbos.workflow_status (
+        INSERT INTO %s.workflow_status (
         workflow_uuid, status, name, class_name, config_name,
         output, error, executor_id, application_version, application_id,
         authenticated_user, authenticated_roles, assumed_role, queue_name,
@@ -172,7 +173,8 @@ public class WorkflowDAO {
             updated_at = EXCLUDED.updated_at,
             executor_id = EXCLUDED.executor_id
         RETURNING recovery_attempts, status, workflow_deadline_epoch_ms, name, class_name, config_name, queue_name
-        """;
+        """
+            .formatted(Constants.DB_SCHEMA);
 
     try (PreparedStatement stmt = connection.prepareStatement(insertSQL)) {
 
@@ -289,9 +291,9 @@ public class WorkflowDAO {
 
     // Construct the final SQL query
     String sql =
-        String.format(
-            "UPDATE %s.workflow_status %s %s",
-            Constants.DB_SCHEMA, setClauseBuilder.toString(), whereClauseBuilder.toString());
+        "UPDATE %s.workflow_status %s %s"
+            .formatted(
+                Constants.DB_SCHEMA, setClauseBuilder.toString(), whereClauseBuilder.toString());
 
     int affectedRows;
     try (PreparedStatement pstmt = connection.prepareStatement(sql)) {
@@ -411,7 +413,7 @@ public class WorkflowDAO {
       sqlBuilder.append(", output, error");
     }
 
-    sqlBuilder.append(String.format(" FROM %s.workflow_status ", Constants.DB_SCHEMA));
+    sqlBuilder.append(" FROM %s.workflow_status ".formatted(Constants.DB_SCHEMA));
 
     // --- WHERE Clauses ---
     StringJoiner whereConditions = new StringJoiner(" AND ");
@@ -582,16 +584,15 @@ public class WorkflowDAO {
       throw new IllegalStateException("Database is closed!");
     }
 
-    String sqlTemplate =
+    final String sql =
         """
         SELECT workflow_uuid, queue_name
         FROM %s.workflow_status
         WHERE status = ?
           AND executor_id = ?
           AND application_version = ?
-        """;
-
-    final String sql = String.format(sqlTemplate, Constants.DB_SCHEMA);
+        """
+            .formatted(Constants.DB_SCHEMA);
 
     List<GetPendingWorkflowsOutput> results = new ArrayList<>();
 
@@ -622,9 +623,10 @@ public class WorkflowDAO {
     final String sql =
         """
         SELECT status, output, error
-        FROM dbos.workflow_status
+        FROM %s.workflow_status
         WHERE workflow_uuid = ?
-        """;
+        """
+            .formatted(Constants.DB_SCHEMA);
 
     while (true) {
 
@@ -685,9 +687,8 @@ public class WorkflowDAO {
     }
 
     String sql =
-        String.format(
-            "INSERT INTO %s.operation_outputs (workflow_uuid, function_id, function_name, child_workflow_id) VALUES (?, ?, ?, ?)",
-            Constants.DB_SCHEMA);
+        "INSERT INTO %s.operation_outputs (workflow_uuid, function_id, function_name, child_workflow_id) VALUES (?, ?, ?, ?)"
+            .formatted(Constants.DB_SCHEMA);
 
     try {
       try (Connection connection = dataSource.getConnection();
@@ -714,8 +715,9 @@ public class WorkflowDAO {
     if (dataSource.isClosed()) {
       throw new IllegalStateException("Database is closed!");
     }
-    String sql =
-        "SELECT child_workflow_id FROM dbos.operation_outputs WHERE workflow_uuid = ? AND function_id = ? ";
+    final String sql =
+        "SELECT child_workflow_id FROM %s.operation_outputs WHERE workflow_uuid = ? AND function_id = ? "
+            .formatted(Constants.DB_SCHEMA);
 
     try (Connection connection = dataSource.getConnection();
         PreparedStatement stmt = connection.prepareStatement(sql)) {
@@ -741,8 +743,9 @@ public class WorkflowDAO {
     try (Connection conn = dataSource.getConnection()) {
 
       // Check the status of the workflow. If it is complete, do nothing.
-      String checkStatusSql = " SELECT status FROM %s.workflow_status WHERE workflow_uuid = ? ";
-      checkStatusSql = String.format(checkStatusSql, Constants.DB_SCHEMA);
+      String checkStatusSql =
+          " SELECT status FROM %s.workflow_status WHERE workflow_uuid = ? "
+              .formatted(Constants.DB_SCHEMA);
 
       String currentStatus = null;
       try (PreparedStatement stmt = conn.prepareStatement(checkStatusSql)) {
@@ -772,8 +775,8 @@ public class WorkflowDAO {
               deduplication_id = NULL,
               started_at_epoch_ms = NULL
           WHERE workflow_uuid = ?
-          """;
-      updateSql = String.format(updateSql, Constants.DB_SCHEMA);
+          """
+              .formatted(Constants.DB_SCHEMA);
 
       try (PreparedStatement stmt = conn.prepareStatement(updateSql)) {
         stmt.setString(1, WorkflowState.CANCELLED.name());
@@ -885,11 +888,12 @@ public class WorkflowDAO {
 
     String sql =
         """
-        INSERT INTO dbos.workflow_status (
+        INSERT INTO %s.workflow_status (
         workflow_uuid, status, name, class_name, config_name, application_version, application_id,
         authenticated_user, authenticated_roles, assumed_role, queue_name, inputs, workflow_deadline_epoch_ms, workflow_timeout_ms
         ) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
-        """;
+        """
+            .formatted(Constants.DB_SCHEMA);
 
     try (PreparedStatement stmt = connection.prepareStatement(sql)) {
       stmt.setString(1, forkedWorkflowId);
@@ -922,12 +926,13 @@ public class WorkflowDAO {
 
     String sql =
         """
-        INSERT INTO dbos.operation_outputs
+        INSERT INTO %1$s.operation_outputs
             (workflow_uuid, function_id, output, error, function_name, child_workflow_id )
         SELECT ? as workflow_uuid, function_id, output, error, function_name, child_workflow_id
-            FROM dbos.operation_outputs
+            FROM %1$s.operation_outputs
             WHERE workflow_uuid = ? AND function_id < ?
-        """;
+        """
+            .formatted(Constants.DB_SCHEMA);
 
     try (PreparedStatement stmt = connection.prepareStatement(sql)) {
       stmt.setString(1, forkedWorkflowId);
@@ -947,7 +952,9 @@ public class WorkflowDAO {
 
   private static String getWorkflowStatus(Connection connection, String workflowId)
       throws SQLException {
-    String sql = "SELECT status FROM dbos.workflow_status WHERE workflow_uuid = ?";
+    String sql =
+        "SELECT status FROM %s.workflow_status WHERE workflow_uuid = ?"
+            .formatted(Constants.DB_SCHEMA);
 
     try (PreparedStatement stmt = connection.prepareStatement(sql)) {
       stmt.setString(1, workflowId);
@@ -965,10 +972,11 @@ public class WorkflowDAO {
       throws SQLException {
     String sql =
         """
-        UPDATE dbos.workflow_status
+        UPDATE %s.workflow_status
         SET status = ?, queue_name = ?, recovery_attempts = ?, workflow_deadline_epoch_ms = 0, deduplication_id = NULL,  started_at_epoch_ms = NULL
         WHERE workflow_uuid = ?
-        """;
+        """
+            .formatted(Constants.DB_SCHEMA);
 
     try (PreparedStatement stmt = connection.prepareStatement(sql)) {
       stmt.setString(1, WorkflowState.ENQUEUED.name());
@@ -982,7 +990,8 @@ public class WorkflowDAO {
 
   private static Long getRowsCutoff(Connection connection, long rowsThreshold) throws SQLException {
     String sql =
-        "SELECT created_at FROM dbos.workflow_status ORDER BY created_at DESC OFFSET ? LIMIT 1";
+        "SELECT created_at FROM %s.workflow_status ORDER BY created_at DESC OFFSET ? LIMIT 1"
+            .formatted(Constants.DB_SCHEMA);
     try (PreparedStatement stmt = connection.prepareStatement(sql)) {
       stmt.setLong(1, rowsThreshold - 1);
       try (ResultSet rs = stmt.executeQuery()) {
@@ -1012,7 +1021,8 @@ public class WorkflowDAO {
 
       if (cutoffEpochTimestampMs != null) {
         String sql =
-            "DELETE FROM dbos.workflow_status WHERE created_at < ? AND status NOT IN (?, ?)";
+            "DELETE FROM %s.workflow_status WHERE created_at < ? AND status NOT IN (?, ?)"
+                .formatted(Constants.DB_SCHEMA);
         try (PreparedStatement stmt = connection.prepareStatement(sql)) {
           stmt.setLong(1, cutoffEpochTimestampMs);
           stmt.setString(2, WorkflowState.PENDING.toString());
